unpackaged/main/default/objects/POS_State_Setting__mdt/POS_State_Setting__mdt.object-meta.xml
<CustomObject>
    <description>POS Customization settings for the Single Barrel Process.  This will hold data that will specify what static resources apply to specific states and brands.</description>
    <label>POS State Setting</label>
    <pluralLabel>POS State Settings</pluralLabel>
</CustomObject>