unpackaged/main/default/objects/POS_State_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is mark record as active/inactive</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>