unpackaged/main/default/objects/POS_State_Setting__mdt/fields/POS_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>POS_Static_Resource__c</fullName>
    <description>Lookup to the static resource name and the question to be displayed on the page</description>
    <label>POS Static Resource</label>
    <referenceTo>POS_Static_Resource__mdt</referenceTo>
    <relationshipLabel>POS State Settings</relationshipLabel>
    <relationshipName>POS_State_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>