unpackaged/main/default/objects/POS_State_Setting__mdt/fields/Premise_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Type__c</fullName>
    <label>Premise Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Premise</fullName>
                <default>true</default>
                <label>On Premise</label>
            </value>
            <value>
                <fullName>Off Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>