unpackaged/main/default/objects/POS_State_Setting__mdt/fields/Show_Text_Options__c.field-meta.xml
<CustomField>
    <fullName>Show_Text_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Text Options</label>
    <type>Checkbox</type>
</CustomField>