unpackaged/main/default/objects/POS_State_Setting__mdt/listViews/El_Tesoro.listView-meta.xml
<ListView>
    <fullName>El_Tesoro</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>POS_Static_Resource__c</columns>
    <columns>Premise_Type__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>ET</value>
    </filters>
    <label>El Tesoro</label>
    <language>en_US</language>
</ListView>