unpackaged/main/default/objects/POS_State_Setting__mdt/listViews/Jim_Beam.listView-meta.xml
<ListView>
    <fullName>Jim_Beam</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>State__c</columns>
    <columns>Premise_Type__c</columns>
    <columns>POS_Static_Resource__c</columns>
    <columns>Default_Text_Value__c</columns>
    <columns>Options__c</columns>
    <columns>Show_Text_Options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>JB</value>
    </filters>
    <label>Jim Beam</label>
    <language>en_US</language>
</ListView>