unpackaged/main/default/objects/POS_State_Setting__mdt/listViews/Knob_Creek_Rye.listView-meta.xml
<ListView>
    <fullName>Knob_Creek_Rye</fullName>
    <columns>MasterLabel</columns>
    <columns>POS_Static_Resource__c</columns>
    <columns>Premise_Type__c</columns>
    <columns>State__c</columns>
    <columns>Default_Text_Value__c</columns>
    <columns>Options__c</columns>
    <columns>Show_Text_Options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>KC-Rye</value>
    </filters>
    <label>Knob Creek Rye</label>
    <language>en_US</language>
</ListView>